<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_MachineCtrlStateAbort" Id="{d5ac7684-2254-418c-a115-fb375f618847}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_MachineCtrlStateAbort :
(
	MACHINE_STATE_ABORTING_ROBOT_CYCLE_STOP	:= 0	(*  *)
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>