<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_MachineCtrlStateInit" Id="{031139da-8b48-4370-b379-8522fc5c6f57}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_MachineCtrlStateInit :
(	
	(* Safety init *)
	MACHINE_STATE_INITIALIZING_MACHINE_LOGGER					:= 0,	(*  *)
	MACHINE_STATE_INITIALIZING_ROBOTS_POWER_CHECK				:= 10,	(*  *)
	MACHINE_STATE_INITIALIZING_ROBOT_CONTROLERS_RESET			:= 20,	(*  *)
	
	(* Robot init *)                                          		
	MACHINE_STATE_INITIALIZING_ROBOT_ABORT						:= 30,	(*  *)
	MACHINE_STATE_INITIALIZING_ROBOT_INIT						:= 40,	(*  *)
	MACHINE_STATE_INITIALIZING_ROBOT_HOME						:= 50,	(*  *)
	MACHINE_STATE_INITIALIZING_ROBOT_AUTOMATIC_MODE				:= 60,	(*  *)
	
	(* Rotary table init *)
	MACHINE_STATE_INITIALIZING_ROTARY_TABLE_INIT				:= 70,	(*  *)
	MACHINE_STATE_INITIALIZING_ROTARY_TABLE_HOME				:= 80,	(*  *)
	
	
	
	
	MACHINE_STATE_INITIALIZING_DONE								:= 200	(*  *)
)UINT;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>