<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_VisuCtrlBowlFeeder" Id="{8b0f0940-25a0-48b5-b3bd-47a4b523156f}">
    <Declaration><![CDATA[TYPE ST_VisuCtrlBowlFeeder :
STRUCT
	bStart : BOOL;
	bStartDisabled : BOOL;
	bStop : BOOL;
	bStopDisabled : BOOL;
	rSetpoint : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>